# Geo3DConsole

./: .gitignore  CMakeLists.txt  README.md
include/: Geometry.h
src/: Geometry.cpp  main.cpp
